# Naive-Sea

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/camera/: camera.h
include/rendering/: mesh.h  model.h  modelCreator.h  shader.h
res/shaders/: fog.fs  sea.fs  sea.vs  skybox.fs  skybox.vs
src/: main.cpp  texture.cpp
